apps/prometheus/external-rook-ceph-monitoring/external-rook-ceph.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: external-rook-ceph
  namespace: external-prometheus
  labels:
    app: external-rook-ceph
spec:
  ports:
    - name: http-metrics
      port: 9283
      protocol: TCP
      targetPort: 9283
  type: ClusterIP

---
apiVersion: v1
kind: Endpoints
metadata:
  name: external-rook-ceph
  namespace: external-prometheus
  labels:
    app: external-rook-ceph
subsets:
  - addresses: ${ceph_monitoring_endpoints}
    ports:
      - name: http-metrics
        port: 9283
        protocol: TCP
